# CudaActions

./: CMakeLists.txt  README.md
.github/workflows/: test.yml  windows.yml
codes/src/: main.cu
scripts/actions/: install_cuda_windows.ps1
